--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "perf_hooks": "^0.0.1",
     "puppeteer": "^21.7.0",
+    "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
